# fanren_bili_emo_code_project

./: AGENTS.md  CHANGELOG.md  README.md  emo_lexicon.csv  main.py  manifest.csv  pyproject.toml  requirements.txt  run_pipeline.py
outputs/: run_config.json
outputs/tables/: cleaning_report_ep137.csv  cleaning_report_ep156.csv  cleaning_report_ep86.csv  comment_func_dist_ep137.csv  comment_func_dist_ep156.csv  comment_func_dist_ep86.csv  comment_reply_emo_dist_ep137.csv  comment_reply_emo_dist_ep156.csv  comment_reply_emo_dist_ep86.csv  comment_reply_func_dist_ep137.csv  comment_reply_func_dist_ep156.csv  comment_reply_func_dist_ep86.csv  comment_reply_model_emo_dist_ep137.csv  comment_reply_model_emo_dist_ep156.csv  comment_reply_model_emo_dist_ep86.csv  comment_root_emo_dist_ep137.csv  comment_root_emo_dist_ep156.csv  comment_root_emo_dist_ep86.csv  comment_root_func_dist_ep137.csv  comment_root_func_dist_ep156.csv  comment_root_func_dist_ep86.csv  comment_root_model_emo_dist_ep137.csv  comment_root_model_emo_dist_ep156.csv  comment_root_model_emo_dist_ep86.csv  danmaku_burst_2s_ep137.csv  danmaku_burst_2s_ep156.csv  danmaku_burst_2s_ep86.csv  danmaku_emo_dist_ep137.csv  danmaku_emo_dist_ep156.csv  danmaku_emo_dist_ep86.csv  danmaku_func_dist_ep137.csv  danmaku_func_dist_ep156.csv  danmaku_func_dist_ep86.csv  danmaku_minute_emo_curve_ep137.csv  danmaku_minute_emo_curve_ep156.csv  danmaku_minute_emo_curve_ep86.csv  danmaku_minute_func_curve_ep137.csv  danmaku_model_emo_dist_ep137.csv  (+26 more)
src/: analysis.py  emo_lex.py  emo_model.py  features.py  func_tag.py  io.py  norm.py
