[project]
name = "fanren-bili-emo-code-project-v4-ollama-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=2.4.0",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "regex>=2025.11.3",
  "scikit-learn>=1.8.0",
  "scipy>=1.16.3",
  "tqdm>=4.67.1",
]
